--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 			<h3>Shalom, I am</h3>
 			<h1>Oyugi Blair</h1>
 			<h3> And I'm a Kenyan <span class="multiple-text" href="#services"></span></h3>
-			<p>Excited about these technological times because <span>this opportunity</span> ideally pairs significantly with your best interests allowining you to <span>amplifiy your social media </span> to <span>position your brand in your audience's mind</span> but also enable you to <span>automate some of your day to day tasks</span> such as customer relation managment</p>
+			<p>Excited about these technological times because <span>this opportunity</span> ideally pairs significantly with your best interests allowing you to <span>amplifiy your social media </span> to <span>position your brand in your audience's mind</span> but also enable you to <span>automate some of your day to day tasks</span> such as customer relation managment</p>
 			<div class="social-media">
 				<a href="https://www.linkedin.com/in/blairoyugi/"><i class="bx bxl-linkedin"></i></a>
 				<!-- <a href="#"><i class="bx bxl-facebook"></i></a> -->
@@ -243,7 +243,8 @@
 			<div class="skills-box">
 				<i class="bx bx-code-alt"></i>
 				<h3>Cyber Security</h3>
-				<p>Like malware and ransomware, cyber exploitors; hackers, are being groomed by the day to take advantage of your <span>vulnerable systems</span>...</p>
+				<!-- <p>Like malware and ransomware, cyber exploitors; hackers, are being groomed by the day to take advantage of your <span>vulnerable systems</span>...</p> -->
+				<p>Any software of massive size will inevitably <span>contain vulnerabilities</span> that dedicated hackers will eventually discover...</p>
 
 				<a href="skills.html" class="btn">What I Can Do For You</a>
 			</div>
