--- a/skills.html
+++ b/skills.html
@@ -59,7 +59,7 @@
 		<div class="skills3-container">
 
 			<div class="skills-content">
-				<p>Am coachable, still, innovative with capable resources and tools for research and analysis, and, in concert with esteemed established mentors and managers,<br><span>every crisis</span> I encounter <span>augments me</span> to grow anti-fragile.<br>I am excited about these technological times because this opportunity ideally pairs significantly with my interests in <span>content and software creation</span>. Still, allowing me to not only showcase my creativity and writing skills, organizational and marketiing prowess; but also improve in these areas through uninterrupted hours of <span>commitment to meaningful,  worthwill tasks</span>.</p>
+				<p>Am coachable, still, innovative with capable resources and tools for research and analysis, and, in concert with esteemed established mentors and managers,<br><span>every crisis</span> I encounter <span>augments me</span> to grow anti-fragile.<br>I am excited about these technological times because this opportunity ideally pairs significantly with my interests in <span>content and software creation</span>. Still, allowing me to not only showcase my creativity and writing skills, organizational and marketing prowess; but also improve in these areas through uninterrupted hours of <span>commitment to meaningful,  worthwill tasks</span>.</p>
 
 				<a href="index.html" class="btn">More</a>
 			</div>
@@ -82,6 +82,8 @@
 				<h2><span>Data</span> Visualization</h2>
 				<p>Combing through your meta data via data analysis with: <span>Qlik view</span>, <span>RStudio</span>, <span>Python</span>, <span>MySQL</span>.</p>
 				<p>Data manipulation and translation.</p>
+				<p>Visualize your data using <span>R</span>.</p>
+				<p>Analyse your data using <span>NumPy</span>, <span>Pandas</span>, & <span>Matplotlib</span>.</p>
 			</div>
 
 			<div class="skills3-box">
@@ -90,6 +92,7 @@
 				<p><span>Adobe illustrator</span>, <span>Adobe photoshop</span> and <span>Canva</span> command for content development (logo design and picture editing - Graphics designing)</p>
 				<p>Social media manangment.</p>
 				<p>Product and Stage photography.</p>
+				<p><span>Customer</span> support and Client <span>satisfaction</span>.</p>
 				<p>Web designing and development via <span>html</span>, <span>CSS</span>, <span>JavaScript</span>, <span>MySQL</span> & <span>PHP</span>.</p>
 			</div>
 
