updated cv and some grammar

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
 			<div class="skills-box">
 				<i class="bx bx-bar-chart-alt"></i>
 				<h3>Data Visualization</h3>
-				<p>For informed <span>decision making</span>, employ Business Intelligence through <span>data analysis</span> and <span>data science</span>...</p>
+				<p>For informed <span>decision making</span>, you have to employ Business Intelligence through <span>data analysis</span> and <span>data science</span>...</p>
 
 				<a href="skills.html" class="btn">What I Can Do For You</a>
 			</div>
@@ -260,7 +260,7 @@
 			<div class="skills-box">
 				<i class="bx bx-bar-chart-alt"></i>
 				<h3>Developer</h3>
-				<p><span>Digitize</span> relevant <span>operations</span> still <span>save</span> on <span>valuble time</span> with our automated sysytems to manage your schedules and, your valued clients...</p>
+				<p><span>Digitize</span> relevant <span>operations saving</span> on <span>valuble time</span> with our automated systems to manage your schedules and, your valued clients...</p>
 
 				<a href="skills.html" class="btn">What I Can Do For You</a>
 			</div>
@@ -277,7 +277,7 @@
 			<div class="skills-box">
 				<i class="bx bx-code-alt"></i>
 				<h3>Network Engineering</h3>
-				<p>Conventional computer networks designed for <span>optimal performance</span> is not enough, they need to support in-house voice, data, video, and wireless services...</p>
+				<p>Networks designed for <span>optimal performance</span> is not enough, they need to support in-house voice, data, video, and wireless services...</p>
 
 				<a href="skills.html" class="btn">What I Can Do For You</a>
 			</div>
