added the oblair logo

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE-edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Responsive Personal Website Design | Blair</title>
+	<title>Oyugi | Blair</title>
+
+	<!-- Favicons -->
+    <link rel="shortcut icon" href="images/oblair logo.png">
 
 	<!-- box icons from boxicons.com-->
 	<link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel='stylesheet'>
@@ -31,7 +34,7 @@
 
 <!-- header design -->
 	<header class="header">
-		<a href="skills.html" class="logo">o b l a i r <span>+</span></a>
+		<a href="skills.html" class="logo"><img src="images/oblair logo.png"></a>
 
 		<!-- icons -->
 		<i class="bx bx-menu" id="menu-icon"></i>
