--- a/skills.html
+++ b/skills.html
@@ -4,7 +4,10 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE-edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Responsive Personal Website Design | Blair</title>
+	<title>Oyugi | Blair</title>
+
+	<!-- Favicons -->
+    <link rel="shortcut icon" href="images/oblair logo.png">
 
 	<!-- box icons from boxicons.com-->
 	<link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel='stylesheet'>
@@ -23,8 +26,8 @@
 <body>
 
 <!-- header design -->
-	<header class="header2">
-		<a href="index.html" class="logo">o b l a i r <span>+</span></a>
+	<header class="header">
+		<a href="index.html" class="logo"><img src="images/oblair logo.png"></a>
 
 		<!-- icons -->
 		<i class="bx bx-menu" id="menu-icon"></i>
@@ -59,7 +62,7 @@
 		<div class="skills3-container">
 
 			<div class="skills-content">
-				<p>Am coachable, still, innovative with capable resources and tools for research and analysis, and, in concert with esteemed established mentors and managers,<br><span>every crisis</span> I encounter <span>augments me</span> to grow anti-fragile.<br>I am excited about these technological times because this opportunity ideally pairs significantly with my interests in <span>content and software creation</span>. Still, allowing me to not only showcase my creativity and writing skills, organizational and marketing prowess; but also improve in these areas through uninterrupted hours of <span>commitment to meaningful,  worthwill tasks</span>.</p>
+				<p>Am coachable, still, innovative with capable resources and tools for research and analysis, and, in concert with esteemed established mentors and managers,<span>every crisis</span> I encounter <span>augments me</span> to grow anti-fragile.<br>I am excited about these technological times because this opportunity ideally pairs significantly with my interests in <span>content and software creation</span>. Still, allowing me to not only showcase my creativity and writing skills, organizational and marketing prowess; but also improve in these areas through uninterrupted hours of <span>commitment to meaningful,  worthwill tasks</span>.</p>
 
 				<a href="index.html" class="btn">More</a>
 			</div>
