joined contacts to footer

--- a/index.html
+++ b/index.html
@@ -368,68 +368,62 @@
 		</div>
 	</section>
 
-<!-- contact section design -->
-	<section class="contact" id="contact">
-		<h2 class="heading"><span>Reach Out</span> To Blair</h2>
-
-		<div class="row">
-
-			<div class="contact-col">
-				<i class="fa fa-phone"></i>
-				<span>
-					<h5>+254 703846352</h5>
-					<p>Halla at <span>Blair</span></p>
-				</span>
-			</div>
-			<div class="contact-col">
-				<i class="fa fa-envelope"></i>
-				<span>
-					<h5>oblairmark@gmail.com</h5>
-					<p>Email Blair your query for <span>solutions</span></p>
-				</span>
-			</div>
-
-			<!-- <form action="#">
-				<div class="input-box">
-					<input type="text" placeholder="Full name">
-					<input type="email" placeholder="Email Address">
-				</div>
-
-				<div class="input-box">
-					<input type="number" placeholder="Mobile Number">
-					<input type="text" placeholder="Email Subject">
-				</div>
-				<textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
-				<input type="submit" value="Send Message" class="btn">
-			</form> -->
-		</div>
-
-		<!-- <h3>It's difficult for me to do $#!tty work!</h3> -->
-
-	</section>
-
-
-
 <!-- footer design -->
 	<footer class="footer">
 
-		<!--  brand design  -->
-			<main id="brands" class="brands">
+		<div class="no_footer_text">
 
-				<h4>Brands oblair Has <span>Partnered</span> With</h4>
+			<div class="contact" id="contact">
 
-				<div class="brands-col">
-					<div class="ewan-logo">
-						<a href="https://eminentmmark.github.io/ewan/"><img href="https://eminentmmark.github.io/ewan/" src="images/ewan3.svg"></a>
-						<p>visit <span> Ewan Electric</span></p>
+				<h4 class="head"><span>Reach Out</span> To Blair</h4>
+
+				<div class="row">
+
+					<img src="images/oblair logo.png">
+
+					<div class="contact-col">
+						<i class="fa fa-phone"></i>
+						<span>
+							<h5>+254 703846352</h5>
+							<p>Halla at <span>Blair</span></p>
+						</span>
 					</div>
-				
-					<div class="ait-logo">
-						<a href="https://eminentmmark.github.io/afrika_in_time/"><img href="https://eminentmmark.github.io/afrika_in_time/" src="images/ait2logo.png"></a>
-						<p>visit <span> Afrika in Time</span></p>
+					<div class="contact-col">
+						<i class="fa fa-envelope"></i>
+						<span>
+							<h5>oblairmark@gmail.com</h5>
+							<p>Email Blair your query for <span>solutions</span></p>
+						</span>
+					</div>
+					<div class="social-media2">
+						<a href="https://www.linkedin.com/in/blairoyugi/"><i class="bx bxl-linkedin"></i></a>
+						<!-- <a href="#"><i class="bx bxl-facebook"></i></a> -->
+						<a href="https://twitter.com/oblair_"><i class="bx bxl-twitter"></i></a>
+						<!-- <a href="#"><i class="bx bxl-instagram-alt"></i></a> -->
 					</div>
 				</div>
-			</main>
+
+			</div>
+
+			<!--  brand design  -->
+				<main id="brands" class="brands">
+
+					<h4>Brands oblair Has <span>Partnered</span> With</h4>
+
+					<div class="brands-col">
+						<div class="ewan-logo">
+							<a href="https://eminentmmark.github.io/ewan/"><img href="https://eminentmmark.github.io/ewan/" src="images/ewan3.svg"></a>
+							<p>visit <span> Ewan Electric</span></p>
+						</div>
+					
+						<div class="ait-logo">
+							<a href="https://eminentmmark.github.io/afrika_in_time/"><img href="https://eminentmmark.github.io/afrika_in_time/" src="images/ait2logo.png"></a>
+							<p>visit <span> Afrika in Time</span></p>
+						</div>
+					</div>
+				</main>
+
+			</div>
 
 		<div class="footer-text">
 			<div class="footer-p">
