added services to footer

--- a/index.html
+++ b/index.html
@@ -373,6 +373,7 @@
 
 		<div class="no_footer_text">
 
+			<!--  contact  -->
 			<div class="contact" id="contact">
 
 				<h4 class="head"><span>Reach Out</span> To Blair</h4>
@@ -401,6 +402,32 @@
 						<a href="https://twitter.com/oblair_"><i class="bx bxl-twitter"></i></a>
 						<!-- <a href="#"><i class="bx bxl-instagram-alt"></i></a> -->
 					</div>
+				</div>
+
+			</div>
+
+			<!--  services  -->
+			<div class="servicex">
+
+				<h4><span>Serv</span>ic<span>e</span>s</h4>
+
+				<div class="servicexp">
+
+					<p>Cyber Security</p>
+					<p>Data Visualization</p>
+					<p>Developer</p>
+					<p>Digital Marketing</p>
+					<p>Network Engineering</p>
+					<p>Webmaster</p> 
+						<!-- <div class="ewan-logo">
+							<a href="https://eminentmmark.github.io/ewan/"><img href="https://eminentmmark.github.io/ewan/" src="images/ewan3.svg"></a>
+							<p>visit <span> Ewan Electric</span></p>
+						</div>
+					
+						<div class="ait-logo">
+							<a href="https://eminentmmark.github.io/afrika_in_time/"><img href="https://eminentmmark.github.io/afrika_in_time/" src="images/ait2logo.png"></a>
+							<p>visit <span> Afrika in Time</span></p>
+						</div> -->
 				</div>
 
 			</div>
