updated the geader and the footer for smaller devices

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
 			<div class="skills-box">
 				<i class="bx bx-code-alt"></i>
 				<h3>Network Engineering</h3>
-				<p>Networks designed for <span>optimal performance</span> is not enough, they need to support in-house voice, data, video, and wireless services...</p>
+				<p>Networks designed for <span>optimal performance</span> is not enough, they need to support in-house voice, data, surveilance, and wireless services...</p>
 
 				<a href="skills.html" class="btn">What I Can Do For You</a>
 			</div>
@@ -380,7 +380,9 @@
 
 				<div class="row">
 
-					<img src="images/oblair logo.png">
+					<div class="img">
+						<img src="images/oblair logo.png">
+					</div>
 
 					<div class="contact-col">
 						<i class="fa fa-phone"></i>
