--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 			<h3>Shalom, I am</h3>
 			<h1>Oyugi Blair</h1>
 			<h3> And I'm a Kenyan <span class="multiple-text" href="#services"></span></h3>
-			<p>Excited about these technological times because <span>this opportunity</span> ideally pairs significantly with your best interests allowing you to <span>amplifiy your social media </span> to <span>position your brand in your audience's mind</span> but also enable you to <span>automate some of your day to day tasks</span> such as customer relation managment</p>
+			<p>But what really sets me apart is my passion for AI, specifically in the field of <span>generative AI</span>. I take pride in <span>harnessing the power of AI to devise cutting-edge solutions</span>, be it in Buckingham Palace, Silicon Valley, or a hidden garage, a bit of Blair magic can transform any space into an innovation playground. Buckle up, because with me, it's always go-time!</p>
 			<div class="social-media">
 				<a href="https://www.linkedin.com/in/blairoyugi/"><i class="bx bxl-linkedin"></i></a>
 				<!-- <a href="#"><i class="bx bxl-facebook"></i></a> -->
@@ -226,13 +226,17 @@
 		<div class="about-content">
 			<h2 class="heading">About <span>Oyugi Blair</span></h2>
 			<h3> <span class="multiple-text" href="#services"></span></h3>
-			<p>I take my work seriously and I understand the success of your organization is very much dependent on the performance of employees like me, who occupy roles that have a significant impact on your results.</p>
+			<p>Blair Oyugi is an enthusiast in Artificial Intelligence and IT specialist, having skilfully harnessed the power of generative AI for cutting-edge solutions. He possesses an extensive educational background, with each degree and certification intensifying his incisive knowledge and understanding of Cybersecurity, Network administration, AI, and Software development.</p>
 
-			<p>The professional experience I have gained during my working life to date will be a benefit to your team. For example, I understand there's a requirment to collaborate with others to complete difficult, time-sensitive projects to exacting standards. In my previous role I was regularly required to work alongside other departmental team members and company stakeholders to deliver important projects for clients.</p>
+			<p>His academic accolades have transcended into real-world contexts through his remarkable professional journey. As a Network Administrator at Weconnect, Blair showcases his impressive ability to establish, monitor, and manage networks. His meticulous attention to detail, customer-centric mentality, and budgeting prowess are valuable assets that drive his success and impact in the role.</p>
 
-			<p>Through out each team task or project, I always ensured I carried out my work to exacting standards whilst supporting other members of the team. In addition to being a strong team player, I have excellent communication and interpersonal skills, I am self-motivated, meet deadlines, and, I will continually look to improve, develop, and , embrace change whilst in the role.</p>
+			<p>Previously at Manyota Limited, Blair leveraged his web development skills to spearhead the project of creating the organisation's website. His ability to design and implement a responsive, user-friendly website attests to his mastery in using HTML, CSS, Javascript, PHP, and MySQL.</p>
 
-			<p>To summarize, I am a highly professional, caring, trustworthy, friendly, and, motivated individual; and i believe I would make an excellent member of your organization who can quickly input value and help you achieve your commercial and financial goals.</p>
+			<p>As a Content Developer and Strategist for Afrika in Time, Blair's creativity and strategic planning skills came to the fore. He led teams, delegated tasks, and ensured a smooth, efficient workflow, delivering high-quality content and customer satisfaction.</p>
+
+			<p>At Truthbleads, Blair utilised his multi-faceted skills as a Webmaster, managing everything from web design to SEO optimisation. His ability to drive traffic and boost visibility on search engines demonstrates his comprehensive understanding of the digital landscape.</p>
+
+			<p>In essence, Blair is a tech-savvy professional, armed with a robust blend of technical and creative skills. His profound knowledge combined with experience in various domains makes him an invaluable asset to any future employer or client. He’s not just an IT specialist; he's a pragmatic visionary, committed to using AI and modern technologies to transform and elevate businesses.</p>
 
 			<!-- <a href="#" class="btn">Read More</a> -->
 		</div>
