updated cv and services

--- a/index.html
+++ b/index.html
@@ -146,12 +146,10 @@
 				</div>
 
 				<a href="https://wa.me/254703846352" class="hero-btn red-btn">Call Blair now!</a> 
-
+<!-- 
 				<div class="pricing-table">
 					<div class="details">
 						<h2>Get and stay connected with <span>Zuku Home Fibre</span> FREE INSTALLATION <span>at Ksh2,800 for 10mbps</span> and <span>Ksh4,400 for 40mbps</span></h2>
-						<!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua.</p> -->
 					</div>
 
 					<div class="grid">
@@ -209,10 +207,10 @@
 							</div>
 						</div>
 					</div>
-				</div>
+				</div> 
 
 
-			<a href="skills.html" class="btn">Offering</a>
+			<a href="skills.html" class="btn">Offering</a> -->
 
 		</div>
 	</section>
@@ -247,11 +245,20 @@
 		<h2 class="heading">Blair's <span>Skill</span>s<span>et</span></h2>
 
 		<div class="skills-container">
+
+			<div class="skills-box">
+				<i class="bx bxs-paint"></i>
+				<h3>Artificial Intelligence</h3>
+				<p>Harness the power of <span>generative AI</span> to devise <span>cutting-edge solutions</span> through <span>Prompt Engineering</span>...</p>
+
+				<a href="skills.html" class="btn">What I Can Do For You</a>
+			</div>
+
 			<div class="skills-box">
 				<i class="bx bx-code-alt"></i>
 				<h3>Cyber Security</h3>
 				<!-- <p>Like malware and ransomware, cyber exploitors; hackers, are being groomed by the day to take advantage of your <span>vulnerable systems</span>...</p> -->
-				<p>Any software of massive size will inevitably <span>contain vulnerabilities</span> that dedicated hackers will eventually discover...</p>
+				<p>Any software of massive size will inevitably <span>contain vulnerabilities</span> that will eventually be exploited...</p>
 
 				<a href="skills.html" class="btn">What I Can Do For You</a>
 			</div>
@@ -289,14 +296,6 @@
 				<a href="skills.html" class="btn">What I Can Do For You</a>
 			</div>
 		
-			<div class="skills-box">
-				<i class="bx bxs-paint"></i>
-				<h3>Webmaster</h3>
-				<p>Let an <span>elegant</span> website not only <span>showcase</span> your offering and contact details to your audience, still, manage your customer relatioships...</p>
-
-				<a href="skills.html" class="btn">What I Can Do For You</a>
-			</div>
-
 			<div class="skills-box">
 				<i class="bx bx-bar-chart-alt"></i>
 				<h3>Publications & Forums</h3>
