--- a/skills.html
+++ b/skills.html
@@ -69,6 +69,18 @@
 
 			<div class="skills3-box">
 				<i class="bx bx-code-alt"></i>
+				<h2>Artificial <span>Intelligence</span></h2>
+				<p>Harness the power of <span>generative AI</span> to devise <span>cutting-edge solutions</span> through <span>Prompt Engineering</span>.</p>
+				<p><span>Debugging</span> code and <span>Web scrapping</span>.</p>
+				<p><span>Generating and analysing</span> content using <span>GPT tools</span> and more advanced tools.</p>
+				<!-- <p><span>Endpoint security</span> for your devices.</p>
+				<p>Mitigate SQL injection attacks via <span>SSL/TSL certificates</span> and <span>API keys</span> to archieve API security.</p>
+				<p><span>Digital evidence</span> aquisition and preservation to maintain its integrity.</p>
+				<p>Malware anaysis and reverse engineering via <span>sandboxes</span>.</p> -->
+			</div>
+
+			<div class="skills3-box">
+				<i class="bx bx-code-alt"></i>
 				<h2>Cyber <span>Security</span></h2>
 				<p>Monitor, prevent, detect, investigate, and <span>respond to cyber threats</span> around the clock.</p>
 				<p><span>Firewalls</span> configuration.</p>
@@ -211,11 +223,10 @@
 
 				<a href="https://wa.me/254703846352" class="hero-btn red-btn">Call Blair now!</a> 
 
-				<div class="pricing-table">
+				<!-- <div class="pricing-table">
 					<div class="details">
 						<h2>Get and stay connected with <span>Zuku Home Fibre</span> FREE INSTALLATION <span>at Ksh2,800 for 10mbps</span> and <span>Ksh4,400 for 40mbps</span></h2>
-						<!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua.</p> -->
+						
 					</div>
 
 					<div class="grid">
@@ -273,7 +284,7 @@
 							</div>
 						</div>
 					</div>
-				</div>
+				</div> -->
 			</div>
 		</section>
 
