--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
 			<div class="skills-box">
 				<i class="bx bx-bar-chart-alt"></i>
 				<h3>Data Visualization</h3>
-				<p>For informed <span>decision making</span>, you have to employ Business Intelligence through <span>data analysis</span> and <span>data science</span>...</p>
+				<p>For informed <span>decision making</span>, employ Business Intelligence through <span>data analysis</span> and <span>data science</span>...</p>
 
 				<a href="skills.html" class="btn">What I Can Do For You</a>
 			</div>
