changed IT to CS

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 		<div class="about-content">
 			<h2 class="heading">About <span>Oyugi Blair</span></h2>
 			<h3> <span class="multiple-text" href="#services"></span></h3>
-			<p>Blair Oyugi is an enthusiast in Artificial Intelligence and IT specialist, having skilfully harnessed the power of generative AI for cutting-edge solutions. He possesses an extensive educational background, with each degree and certification intensifying his incisive knowledge and understanding of Cybersecurity, Network administration, AI, and Software development.</p>
+			<p>Blair Oyugi is an enthusiast in Artificial Intelligence and CS specialist, having skilfully harnessed the power of generative AI for cutting-edge solutions. He possesses an extensive educational background, with each degree and certification intensifying his incisive knowledge and understanding of Cybersecurity, Network administration, AI, and Software development.</p>
 
 			<p>His academic accolades have transcended into real-world contexts through his remarkable professional journey. As a Network Administrator at Weconnect, Blair showcases his impressive ability to establish, monitor, and manage networks. His meticulous attention to detail, customer-centric mentality, and budgeting prowess are valuable assets that drive his success and impact in the role.</p>
 
@@ -234,7 +234,7 @@
 
 			<p>At Truthbleads, Blair utilised his multi-faceted skills as a Webmaster, managing everything from web design to SEO optimisation. His ability to drive traffic and boost visibility on search engines demonstrates his comprehensive understanding of the digital landscape.</p>
 
-			<p>In essence, Blair is a tech-savvy professional, armed with a robust blend of technical and creative skills. His profound knowledge combined with experience in various domains makes him an invaluable asset to any future employer or client. He’s not just an IT specialist; he's a pragmatic visionary, committed to using AI and modern technologies to transform and elevate businesses.</p>
+			<p>In essence, Blair is a tech-savvy professional, armed with a robust blend of technical and creative skills. His profound knowledge combined with experience in various domains makes him an invaluable asset to any future employer or client. He’s not just an computer science specialist; he's a pragmatic visionary, committed to using AI and modern technologies to transform and elevate businesses.</p>
 
 			<!-- <a href="#" class="btn">Read More</a> -->
 		</div>
@@ -418,6 +418,7 @@
 
 				<div class="servicexp">
 
+					<p>Artificial Intelligence</p>
 					<p>Cyber Security</p>
 					<p>Data Visualization</p>
 					<p>Developer</p>
