--- a/skills.html
+++ b/skills.html
@@ -332,6 +332,7 @@
 
 				<div class="servicexp">
 
+					<p>Artificial Intelligence</p>
 					<p>Cyber Security</p>
 					<p>Data Visualization</p>
 					<p>Developer</p>
