adjusted the prof titles

--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
 		<div class="home-content">
 			<h3>Shalom, I am</h3>
 			<h1>Oyugi Blair</h1>
-			<h3> And I'm a Kenyan <span class="multiple-text" href="#services"></span></h3>
+			<h3>And I'm a Kenyan<h3>
+			<h3><span class="multiple-text" href="#services"></span></h3>
 			<p>But what really sets me apart is my passion for AI, specifically in the field of <span>generative AI</span>. I take pride in <span>harnessing the power of AI to devise cutting-edge solutions</span>, be it in Africa's Silicon Savannah, Buckingham Palace, Silicon Valley, or a hidden garage, a bit of Blair magic can transform any space into an innovation playground. Buckle up, because with me, it's always go-time!</p>
 			<div class="social-media">
 				<a href="https://www.linkedin.com/in/blairoyugi/"><i class="bx bxl-linkedin"></i></a>
