added updated resume

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 			</div>
 
 			<div class="buto">
-				<a href="./doc/NEW DEV RESUME.pdf" class="btn">Blair's Resume</a>
+				<a href="./doc/BLAIR'S RESUME.pdf" class="btn">Blair's Resume</a>
 				<a href="https://github.com/eminentmmark" class="btn">Blair's Github</a>
 			</div>
 
