added Chriva logo

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 			<h3>Shalom, I am</h3>
 			<h1>Oyugi Blair</h1>
 			<h3>And I'm a Kenyan <br><span class="multiple-text" href="#services"></span></h3>
-			<p>But what really sets me apart is my passion for AI, specifically in the field of <span>generative AI</span>. I take pride in <span>harnessing the power of AI to devise cutting-edge solutions</span>, be it in Africa's Silicon Savannah, Buckingham Palace, Silicon Valley, or a hidden garage, a bit of Blair magic can transform any space into an innovation playground. Buckle up, because with me, it's always go-time!</p>
+			<p>But what really sets me apart is my passion for AI, specifically in the field of <span>generative and cognitive AI</span>. I take pride in <span>harnessing the power of AI to devise cutting-edge solutions</span>, be it in Africa's Silicon Savannah, Buckingham Palace, Silicon Valley, or a hidden garage, a bit of Blair magic can transform any space into an innovation playground. Buckle up, because with me, it's always go-time!</p>
 			<div class="social-media">
 				<a href="https://www.linkedin.com/in/blairoyugi/"><i class="bx bxl-linkedin"></i></a>
 				<!-- <a href="#"><i class="bx bxl-facebook"></i></a> -->
@@ -436,15 +436,22 @@
 					<h4>Brands oblair Has <span>Partnered</span> With</h4>
 
 					<div class="brands-col">
+
+						<div class="ait-logo">
+							<a href="https://eminentmmark.github.io/afrika_in_time/"><img href="https://eminentmmark.github.io/afrika_in_time/" src="images/ait2logo.png"></a>
+							<p>visit <span> Afrika in Time</span></p>
+						</div>
+
+						<div class="chriva-logo">
+							<a href="#"><img href="#" src="images/chriva.png"></a>
+							<!-- <p>visit <span>Chriva Wellness Spa</span></p> -->
+						</div>
+
 						<div class="ewan-logo">
 							<a href="https://eminentmmark.github.io/ewan/"><img href="https://eminentmmark.github.io/ewan/" src="images/ewan3.svg"></a>
 							<p>visit <span> Ewan Electric</span></p>
 						</div>
 					
-						<div class="ait-logo">
-							<a href="https://eminentmmark.github.io/afrika_in_time/"><img href="https://eminentmmark.github.io/afrika_in_time/" src="images/ait2logo.png"></a>
-							<p>visit <span> Afrika in Time</span></p>
-						</div>
 					</div>
 				</main>
 
