--- a/skills.html
+++ b/skills.html
@@ -350,15 +350,22 @@
 					<h4>Brands oblair Has <span>Partnered</span> With</h4>
 
 					<div class="brands-col">
-						<div class="ewan-logo">
-							<a href="https://eminentmmark.github.io/ewan/"><img href="https://eminentmmark.github.io/ewan/" src="images/ewan3.svg"></a>
-							<p>visit <span> Ewan Electric</span></p>
-						</div>
-					
+						
 						<div class="ait-logo">
 							<a href="https://eminentmmark.github.io/afrika_in_time/"><img href="https://eminentmmark.github.io/afrika_in_time/" src="images/ait2logo.png"></a>
 							<p>visit <span> Afrika in Time</span></p>
 						</div>
+
+						<div class="chriva-logo">
+							<a href="#"><img href="#" src="images/chriva.png"></a>
+							<!-- <p>visit <span>Chriva Wellness Spa</span></p> -->
+						</div>
+
+						<div class="ewan-logo">
+							<a href="https://eminentmmark.github.io/ewan/"><img href="https://eminentmmark.github.io/ewan/" src="images/ewan3.svg"></a>
+							<p>visit <span> Ewan Electric</span></p>
+						</div>
+
 					</div>
 				</main>
 
